force-app/main/default/objects/Trigger_Event__e/Trigger_Event__e.object-meta.xml
<CustomObject>
    <label>Trigger Event</label>
    <pluralLabel>Trigger Events</pluralLabel>
</CustomObject>