force-app/main/default/objects/Trigger_Event__e/fields/eMessage__c.field-meta.xml
<CustomField>
    <fullName>eMessage__c</fullName>
    <label>eMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>