force-app/main/default/objects/Trigger_Event__e/fields/Error_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Error_Reasons__c</fullName>
    <label>Error Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>